--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20620,6 +20620,12 @@
 "~^/static/img/icon/arrow-hook-left$" "/static/img/icon/arrow-hook-left.svg";
 "~^/stressI$" "/stress";
 "~^/The-M$" "/subculture";
+"~^/Guide/projeksjons.*$" "/404";
+"~^/doc/shape-circularangular-2018\.pdf.*$" "/404";
+"~^/arrowsrestauran.*$" "/494";
+"~^/lamp95062.*$" "/404";
+"~^/doc/genetics/2017-grasby\.pdf.*$" "/doc/genetics/heritable/2017-grasby.pdf";
+"~^/static/transclude$" "/static/transclude.js";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
