--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12018,3 +12018,11 @@ default "";
 "~^/doc/cs/js/2025-02-21-gwern-gwernnet-404pageguessesintendedurlusingsitemapeditdistance.png.*$" "/doc/cs/js/2025-02-21-gwern-gwernnet-404pageguessesintendedurlusingsitemapeditdistance.jpg";
 "~^/doc/cs/js/2025-02-21-gwern-gwernnet-blog-index.png.*$" "/doc/cs/js/2025-02-21-gwern-gwernnet-blog-index.jpg";
 "~^/doc/statistics/causality/2020-schneider.pdf.*$" "/doc/statistics/causality/2020-schneider-2.pdf";
+"~^/doc/iq/2010-fox.pdf.*$" "/doc/iq/2009-fox.pdf";
+"~^/doc/iq/2014-benyamin.pdf.*$" "/doc/iq/2013-benyamin.pdf";
+"~^/doc/iq/2019-mansson.pdf.*$" "/doc/iq/2018-mansson.pdf";
+"~^/doc/iq/2021-drakulich.pdf.*$" "/doc/iq/2022-drakulich.pdf";
+"~^/doc/iq/high/smpy/2013-park.pdf.*$" "/doc/iq/high/smpy/2012-park.pdf";
+"~^/doc/longevity/2016-moon.pdf.*$" "/doc/longevity/2017-moon.pdf";
+"~^/doc/longevity/glp/2023-maagensen.pdf.*$" "/doc/longevity/glp/2022-maagensen.pdf";
+"~^/doc/longevity/glp/semaglutide/2023-durak.pdf.*$" "/doc/longevity/glp/semaglutide/2022-durak.pdf";
