--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -275,6 +275,8 @@
 "~^/end-to-end-principle.*$" "/doc/cs/end-to-end-principle/index";
 "~^/energy$" "/doc/psychology/energy/index";
 "~^/false-preference$" "/doc/sociology/false-preference/index";
+"~^/4\.5.*$" "/doc/ai/nn/transformer/gpt/5/4-5/index";
+"~^/[Gg][Pp][Tt]-?4.5.*$" "/doc/ai/nn/transformer/gpt/5/4-5/index";
 
 ## literal matches:
 "~^//$" "/";
@@ -20626,6 +20628,60 @@
 "~^/lamp95062.*$" "/404";
 "~^/doc/genetics/2017-grasby\.pdf.*$" "/doc/genetics/heritable/2017-grasby.pdf";
 "~^/static/transclude$" "/static/transclude.js";
+
+"~^/intelligence-portia-spiders$" "/doc/biology/portia/index";
+"~^/the-long-stagnation\?.*$" "/the-long-stagnation";
+"~^/static/js/\$%7Blink.*$" "/static/js/";
+"~^/static/img/arrow-up-thick.svg$" "/static/img/icon/arrow-up.svg";
+"~^/static/font/dropcap/dropcat/light/I-1-small-1x.png\?v=1698384084$" "/static/font/dropcap/dropcat/light/I-light-1-small-1x.png";
+"~^/static/font/dropcap/dropcat/light/C-2-small-1x.png\?v=1698367821$" "/static/font/dropcap/dropcat/light/C-light-2-small-1x.png";
+"~^/Slowing%252520Moore%252527s%252520Law$" "/slowing-moores-law";
+"~^/review/book/static/img/icon/icons.svg.*$" "/static/img/icon/icons.svg";
+"~^/review/book/static/css/style.css.*$" "/static/css/style.css";
+"~^/review/book/static/css/head.css.*$" "/static/css/head.css";
+"~^/nootropic./The-Last-Muezzin$" "/fiction/the-last-muezzin";
+"~^/newsletter/kjn630/05.*$" "/newsletter/2020/05";
+"~^/newsletterip98/2020/05.*$" "/newsletter/2020/05";
+"~^/newsletter/2020z828/05.*$" "/newsletter/2020/05";
+"~^/newsletter/2020/hf.*$" "/newsletter/2020/index";
+"~^/newsletter/2020/05/.*$" "/newsletter/2020/05";
+"~^/fiction/Missing%252520Cities$" "/fiction/missing-cities";
+"~^/Evolutionary%25252520Licenses$" "/evolutionary-licenses";
+"~^/doc/psychology/music/distraction/1999-furnham-2.pf$" "/doc/psychology/music/distraction/1999-furnham-2.pdf";
+"~^/doc/psychiatry/borderline/2022\.pdf.*$" "/doc/psychiatry/borderline/2022-skaug.pdf";
+"~^/doc/japan/poetry/MKP.*$" "/doc/japan/poetry/";
+"~^/doc/iq/ses/2002-hauser.pdfB.*$" "/doc/iq/ses/2002-hauser.pdf";
+"~^/doc/iq/1992-feingold.Powe.*$" "/doc/iq/1992-feingold.pdf";
+"~^/doc/iq/1971-cattell-abili$" "/doc/iq/1971-cattell-abilitiestheirstructuregrowthaction.pdf";
+"~^/doc/fiction/science%5Cu002Dfiction/1953%5Cu002Ddahl%5Cu002Dthegreatautomaticgrammatizator\.pdf.*$" "/doc/fiction/science-fiction/1953-dahl-thegreatautomaticgrammatizator.pdf";
+"~^/doc/economics/advertising/2019-03-%EF%BF%BD.*$" "/doc/economics/advertising/2019-04-13-2ndadabtest-merged.csv";
+"~^/doc/darknet-market/2012-06-29-nipplesuckcanuckreviews$" "/doc/darknet-market/2012-06-29-nipplesuckcanuckreviews.mht";
+"~^/doc/cs/haskell/%EF%BF%BD.*$" "/doc/cs/haskell/index";
+"~^/doc/algernon/2011-kahneman\.pdf.*$" "https://www.bloomberg.com/opinion/articles/2011-10-24/bias-blindness-and-how-we-truly-think-part-1-daniel-kahneman";
+"~^/dizzyheadspace.*$" "/404";
+"~^/\$dir$" "/404";
+"~^/doc/ai/nn/%C3%B0$" "/doc/ai/nn/index";
+"~^/doc/ai/poetry/2019-12-15-1$" "/doc/ai/poetry/2019-12-18-gpt21.5b-poetry-samples-topp080.txt";
+"~^/doc/cat/ps$" "/doc/cat/psychology/index";
+"~^/doc/sr/sr/2014-01-02-deepdotweb-flomarketexitscam.html$" "/doc/darknet-market/2014-01-02-deepdotweb-flomarketexitscam.html";
+"~^/doc/darknet$" "/doc/darknet-market/index";
+"~^/doc/new$" "/doc/newest/index";
+"~^/doc/psychology/personal$" "/doc/personal/index";
+"~^/note/Ethicist$" "/doc/philosophy/ethics/ethicists/index";
+"~^/doc/psychology/okcupid/howyourraceaffectst$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/on-trying$" "/on-really-trying";
+"~^/doc/reinforcement-learn$" "/doc/reinforcement-learning/index";
+"~^/[a-z0-9-]+/favicon\.ico$" "/favicon.ico";
+"~^/doc/2003-mccord\.pdf.*$" "/doc/sociology/2003-mccord.pdf";
+"~^/doc/technology/2017-02-143.*$" "/doc/technology/2017-02-05-cms-ahistoryofimdbforums.html";
+"~^/InDefenseOfInclusionism$" "/in-defense-of-inclusionism";
+"~^/newsletter/2020/05z.*$" "/newsletter/2020/05";
+"~^/research-crti$" "/research-criticism";
+"~^/research-cri$" "/research-criticism";
+"~^/rese$" "/research-criticism";
+"~^/Self-decrypting%252520files$" "/self-decrypting-files";
+"~^/static/img/image.svg$" "/static/img/icon/image.svg";
+"~^/static/img/404.png$" "/static/img/logo/logo.png";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
