--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12030,3 +12030,5 @@ default "";
 "~^/doc/melatonin/2013-preckel.pdf.*$" "/doc/melatonin/2012-preckel.pdf";
 "~^/doc/nootropic/2009-farah.pdf.*$" "/doc/nootropic/2008-farah.pdf";
 "~^/doc/iq/2014-abdulkadiroglu.pdf.*$" "/doc/iq/high/2014-abdulkadiroglu.pdf";
+"~^/doc/technology/2018-nilsson.pdf.*$" "/doc/technology/virtual-reality/2018-nilsson.pdf";
+"~^/doc/iq/1917-goddard.pdf.*$" "/doc/iq/low/1917-goddard.pdf";
