--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -277,6 +277,7 @@
 "~^/false-preference$" "/doc/sociology/false-preference/index";
 "~^/4\.5.*$" "/doc/ai/nn/transformer/gpt/5/4-5/index";
 "~^/[Gg][Pp][Tt]-?4.5.*$" "/doc/ai/nn/transformer/gpt/5/4-5/index";
+"~^/virtual-reality$" "/doc/technology/virtual-reality/index";
 
 ## literal matches:
 "~^//$" "/";
@@ -20628,7 +20629,6 @@
 "~^/lamp95062.*$" "/404";
 "~^/doc/genetics/2017-grasby\.pdf.*$" "/doc/genetics/heritable/2017-grasby.pdf";
 "~^/static/transclude$" "/static/transclude.js";
-
 "~^/intelligence-portia-spiders$" "/doc/biology/portia/index";
 "~^/the-long-stagnation\?.*$" "/the-long-stagnation";
 "~^/static/js/\$%7Blink.*$" "/static/js/";
