--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12032,3 +12032,7 @@ default "";
 "~^/doc/iq/2014-abdulkadiroglu.pdf.*$" "/doc/iq/high/2014-abdulkadiroglu.pdf";
 "~^/doc/technology/2018-nilsson.pdf.*$" "/doc/technology/virtual-reality/2018-nilsson.pdf";
 "~^/doc/iq/1917-goddard.pdf.*$" "/doc/iq/low/1917-goddard.pdf";
+"~^/doc/ai/nn/diffusion/midjourney/landscape/2025-03-02-gwern-midjourneyv6-windowsxpbliss-glitchartsunset-1.png.*$" "/doc/ai/nn/diffusion/midjourney/landscape/2025-03-02-gwern-midjourneyv6-windowsxpbliss-glitchartsunset-1.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/landscape/2025-03-02-gwern-midjourneyv6-windowsxpbliss-glitchartsunset-4.png.*$" "/doc/ai/nn/diffusion/midjourney/landscape/2025-03-02-gwern-midjourneyv6-windowsxpbliss-glitchartsunset-4.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/landscape/2025-03-02-gwern-midjourney-v6-abstractvolcanicbeach-hereonthelevelsandbetweentheseaandland.png.*$" "/doc/ai/nn/diffusion/midjourney/landscape/2025-03-02-gwern-midjourney-v6-abstractvolcanicbeach-hereonthelevelsandbetweentheseaandland.jpg";
+"~^/doc/economics/2025-shiffersebba.pdf.*$" "/doc/economics/perpetuities/2025-shiffersebba.pdf";
