--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20469,7 +20469,7 @@
 "~^/fiction/clippyLocat.*$" "/fiction/clippy";
 "~^/doc/statistics/decision/1998-18.*$" "/doc/statistics/decision/1998-akaike.pdf";
 "~^/doc/psychology/spaced-repetition/2017-foer-moonwalkingwitheinstein\.pdf.*$" "http://libgen.li/edition.php?id=4319474";
-"~^/doc/psychology/spaced-repetition/2012-chessdata$" "";
+"~^/doc/psychology/spaced-repetition/2012-chessdata$" "/doc/psychology/spaced-repetition/2012-chessdata-perfectpitchspacedrepetition.webm";
 "~^/doc/psychology/okcupid/yourlooksandyourinbox$" "/doc/psychology/okcupid/yourlooksandyourinbox.html";
 "~^/doc/mnemonics/2017-foer\.pdf.*$" "/doc/spaced-repetition/index";
 "~^/doc/japan/history/1937-sadler-themakerofjapan-thelegacyofieyasu\.pdf.*$" "/doc/japan/history/1937-sadler-themakerofmodernjapan-thelegacyofieyasu.pdf";
