--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12036,3 +12036,10 @@ default "";
 "~^/doc/ai/nn/diffusion/midjourney/landscape/2025-03-02-gwern-midjourneyv6-windowsxpbliss-glitchartsunset-4.png.*$" "/doc/ai/nn/diffusion/midjourney/landscape/2025-03-02-gwern-midjourneyv6-windowsxpbliss-glitchartsunset-4.jpg";
 "~^/doc/ai/nn/diffusion/midjourney/landscape/2025-03-02-gwern-midjourney-v6-abstractvolcanicbeach-hereonthelevelsandbetweentheseaandland.png.*$" "/doc/ai/nn/diffusion/midjourney/landscape/2025-03-02-gwern-midjourney-v6-abstractvolcanicbeach-hereonthelevelsandbetweentheseaandland.jpg";
 "~^/doc/economics/2025-shiffersebba.pdf.*$" "/doc/economics/perpetuities/2025-shiffersebba.pdf";
+"~^/doc/ai/nn/transformer/gpt/5/4-5/2025-03-03-anonymous-gpt45-greentext-dwarkeshpatel.png.*$" "/doc/ai/nn/transformer/gpt/5/4-5/2025-03-03-anonymous-gpt45-greentext-dwarkeshpatel.jpg";
+"~^/doc/nootropic/quantified-self/2018-hanley.pdf.*$" "/doc/nootropic/quantified-self/2019-hanley.pdf";
+"~^/doc/longevity/glp/semaglutide/2023-jastreboff.pdf.*$" "/doc/longevity/glp/retatrutide/2023-jastreboff.pdf";
+"~^/doc/longevity/glp/semaglutide/2023-jastreboff-supplement.pdf.*$" "/doc/longevity/glp/retatrutide/2023-jastreboff-supplement.pdf";
+"~^/doc/longevity/glp/semaglutide/2023-jastreboff-figure1-effectofretatrutideonweightlossover48weeks.jpg.*$" "/doc/longevity/glp/retatrutide/2023-jastreboff-figure1-effectofretatrutideonweightlossover48weeks.jpg";
+"~^/doc/longevity/glp/semaglutide/2023-rosenstock.pdf.*$" "/doc/longevity/glp/retatrutide/2023-rosenstock.pdf";
+"~^/doc/ai/2021-junseong-hyperclova.html.*$" "/doc/ai/nn/transformer/gpt/3/2021-junseong-hyperclova.html";
