--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12329,3 +12329,6 @@ default "";
 "~^/doc/politics/2021-walker.pdf.*$" "/doc/politics/2020-walker.pdf";
 "~^/doc/politics/2025-wimmer.pdf.*$" "/doc/politics/2024-wimmer.pdf";
 "~^/doc/genetics/microbiome/2014-rohwer-lifeinourphageworld-2-2.pdf.*$" "/doc/genetics/microbiome/2014-rohwer-lifeinourphageworld.pdf";
+"~^/file$" "/doc/darknet-market/dnm-archive/file/index";
+"~^/retatrutide$" "/doc/longevity/glp/retatrutide/index";
+"~^/doc/darknet-market/silk-road/1/2013-12-13-sr1f-tormarketdump.mht.*$" "/doc/darknet-market/dnm-archive/file/tormarket-20131213-dpr2-dbdump.mht";
