--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20401,6 +20401,9 @@
 "~^/Self-decrypting%252520files$" "/self-decrypting-files";
 "~^/static/img/image.svg$" "/static/img/icon/image.svg";
 "~^/static/img/404.png$" "/static/img/logo/logo.png";
+"~^/old.food.*$" "/oldest-food";
+"~^/oldestfood$" "/oldest-food";
+"~^/oldest-foods.*$" "/oldest-food";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
