--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12332,3 +12332,9 @@ default "";
 "~^/file$" "/doc/darknet-market/dnm-archive/file/index";
 "~^/retatrutide$" "/doc/longevity/glp/retatrutide/index";
 "~^/doc/darknet-market/silk-road/1/2013-12-13-sr1f-tormarketdump.mht.*$" "/doc/darknet-market/dnm-archive/file/tormarket-20131213-dpr2-dbdump.mht";
+"~^/file$" "/doc/darknet-market/dnm-archive/file/index";
+"~^/doc/psychiatry/bipolar/energy/2017-machadaviera.pdf.*$" "/doc/psychiatry/bipolar/energy/2016-machadaviera.pdf";
+"~^/doc/psychiatry/depression/2016-witthoft.pdf.*$" "/doc/psychiatry/depression/2015-witthoft.pdf";
+"~^/doc/psychiatry/schizophrenia/2018-lecei.pdf.*$" "/doc/psychiatry/schizophrenia/2019-lecei.pdf";
+"~^/doc/ai/poetry/2019-03-06-gpt2-poetry-1000samples.txt.*$" "/doc/ai/nn/transformer/gpt/poetry/2019-03-06-gpt2-poetry-1000samples.txt";
+"~^/doc/ai/poetry/2019-05-13-gpt2-poetry-345m-5000samples.txt.*$" "/doc/ai/nn/transformer/gpt/poetry/2019-05-13-gpt2-poetry-345m-5000samples.txt";
