--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12338,3 +12338,5 @@ default "";
 "~^/doc/psychiatry/schizophrenia/2018-lecei.pdf.*$" "/doc/psychiatry/schizophrenia/2019-lecei.pdf";
 "~^/doc/ai/poetry/2019-03-06-gpt2-poetry-1000samples.txt.*$" "/doc/ai/nn/transformer/gpt/poetry/2019-03-06-gpt2-poetry-1000samples.txt";
 "~^/doc/ai/poetry/2019-05-13-gpt2-poetry-345m-5000samples.txt.*$" "/doc/ai/nn/transformer/gpt/poetry/2019-05-13-gpt2-poetry-345m-5000samples.txt";
+"~^/doc/ai/nn/gan/stylegan/anime/2019-02-26-stylegan-faces-network-02048-016041-2-2.pkl.*$" "/doc/ai/nn/gan/stylegan/anime/2019-02-26-stylegan-faces-network-02048-016041.pkl";
+"~^/doc/ai/nn/gan/stylegan/anime/2019-02-26-stylegan-faces-network-02048-016041.pkl.*$" "/doc/ai/nn/gan/stylegan/anime/2019-02-26-gwern-stylegan-faces-network-02048-016041.pkl";
