--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -385,7 +385,8 @@ server {
         rewrite ^/\%26amp\;quot\;(?<original>.*) /$original permanent;
         rewrite ^/.*\%26amp\;quot\;(?<original>.*) /$original permanent;
         rewrite ^/newsletter/2020/%26amp\;quot\;https\:\/\/.*/(?<original>.*) /$original permanent;
-        rewrite ^/(?<original>.*).djvu$ /$original.pdf permanent;
+        rewrite ^/(?<original>.*)\.djvu$ /$original.pdf permanent;
+        rewrite ^/(?<original>.*)\.djvu.*$ /$original.pdf permanent; # ignore trailing junk in this one
         rewrite ^/(?<original>.*)/index/$ /$original/index permanent;
         rewrite ^/(?<original>.*)/.html/$ /$original.html permanent;
         rewrite ^/(?<original>.*)/.pdf/$ /$original.pdf permanent;
