--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20404,6 +20404,57 @@
 "~^/old.food.*$" "/oldest-food";
 "~^/oldestfood$" "/oldest-food";
 "~^/oldest-foods.*$" "/oldest-food";
+"~^/OLD.*$" "/oldest-food";
+"~^/Old.*$" "/oldest-food";
+"~^/old\/$" "/oldest-food";
+"~^/cqmyb-bak.*$" "/404";
+"~^/changelogz$" "/changelog";
+"~^/HPMOR$" "/hpmor";
+"~^/doc/cat/catnip/survey/2017-08-01-1$" "/doc/cat/catnip/survey/2017-08-01-gs-reversed.csv";
+"~^/doc/2006-slater\.pdf.*$" "/doc/culture/2006-slater.pdf";
+"~^/doc/cat/2011-detry\.pdf.*$" "/doc/history/2011-detry.pdf";
+"~^/doc/iq/2005viswesvaran\.pdf.*$" "/doc/iq/2005-viswesvaran.pdf";
+"~^/492$" "/index";
+"~^/doc/Psychology/2019-Scherer\.pdf.*$" "/doc/psychology/2019-scherer.pdf";
+"~^/doc/1998-castrogiovanni\.pdf.*$" "/doc/psychology/nature/1998-castrogiovanni.pdf";
+"~^/nootropic/magnesium/favicon.ico$" "/favicon.ico";
+"~^/:88/favicon.ico$" "/doc/rotten.com/favicon.ico";
+"~^/:5659/favicon.ico$" "/doc/rotten.com/favicon.ico";
+"~^/doc/sociology/1962-calhoon\.pdf.*$" "/doc/sociology/1962-calhoun.pdf";
+"~^/doc/statlstlcs/decision/1994-benter\.pdf.*$" "/doc/statistics/decision/1994-benter.pdf";
+"~^/y35uv4/technology/2004-03-30-shirky-situatedsoftware.html$" "/doc/technology/2004-03-30-shirky-situatedsoftware.html";
+"~^/drugs$" "/drug-heuristics";
+"~^/:88$" "/index";
+"~^/index-cartoon$" "/index";
+"~^/456$" "/index";
+"~^/midafinil$" "/modafinil";
+"~^/newsletter/2020/11/$" "/newsletter/2020/11";
+"~^/nootropic/nootropi$" "/nootropic/nootropics";
+"~^/nootropic/magnesium/n$" "/nootropics/magnesium";
+"~^/nootropic/magnesium/$" "/nootropics/magnesium";
+"~^/nootropic/magnesium/static/img/logo/logo-favicon-appletouch.png$" "/static/img/logo/logo-favicon-appletouch.png";
+"~^/nootropic/magnesium/static/img/logo/logo-favicon-small.png$" "/static/img/logo/logo-favicon-small.png";
+"~^/mood$" "/tags/food";
+"~^/doc/darknet-market/2013-07-9UO.*$" "/doc/darknet-market/2013-07-09-germanarrests.html.maff";
+"~^/doc/cat/biology/2011-zoran$" "/doc/cat/biology/2011-zoran.pdf";
+"~^/doc/ai/ZrF.*$" "/doc/ai/index";
+"~^/doc/ai/video/generation/index\)/$" "/doc/ai/video/generation/index";
+"~^/doc/ai/nn/transformer/index\)/$" "/doc/ai/nn/transformer/index";
+"~^/doc/ai/nn/rnn/index\)/$" "/doc/ai/nn/rnn/index";
+"~^/.*DOCTYPE$" "/404";
+"~^/doc/technology/2004-03-30-shirky-situatedsoftware.html/.*$" "/doc/technology/2004-03-30-shirky-situatedsoftware.html";
+"~^/doc/statistics/decision/1986-stephens-foragingtheory.pdfAnts-at-work:-How-an-insect-society-is-organized$" "";
+"~^/doc/rotten.com/library/bio/crime/osama-bin-laden/$" "/doc/rotten.com/library/bio/crime/terrorists/osama-bin-laden/index.html";
+"~^/doc/reinforcement-learning/multi-agent/index\)/$" "/doc/reinforcement-learning/multi-agent/index";
+"~^/doc/reinforcement-learning/model-free/oa5/index\)/$" "/doc/reinforcement-learning/model-free/oa5/index";
+"~^/doc/reinforcement-learning/model/alphago/index\)/$" "/doc/reinforcement-learning/model/alphago/index";
+"~^/doc/psychology/willpower/index\)/$" "/doc/psychology/willpower/index";
+"~^/doc/psychology/2023-gwern-muskbipolar\.pdf.*$" "/note/elon-musk";
+"~^/doc/longevity/glp/tirzepatide/index\)/$" "/doc/longevity/glp/tirzepatide/index";
+"~^/doc/longevity/glp/semaglutide/index\)/$" "/doc/longevity/glp/semaglutide/index";
+"~^/doc/genetics/heritable/1980-juelnielsen-individualandenvironmentmza.djvu.*$" "/doc/genetics/heritable/1980-juelnielsen-individualandenvironmentmza.pdf";
+"~^/doc/genetics/heritable/1962-shields-monozygotictwinsbroughtupapart.djvu.*$" "/doc/genetics/heritable/1962-shields-monozygotictwinsbroughtupapart.pdf";
+"~^/doc/economics/advertising/2019-03-27-googlesurveys-adblocknonusagereasons-%EF%BF%BD.*$" "/doc/economics/advertising/adblock/2019-03-21-googlesurveys-adblocknonusagereasons.csv";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -21052,11 +21103,9 @@
 "~^/NortonOnline.*$" "/404";
 "~^/OA/.*$" "/404";
 "~^/OA_HTML/.*$" "/404";
-"~^/OLD.*$" "/404";
 "~^/OLD/.*$" "/404";
 "~^/OWNED.php.*$" "/404";
 "~^/Oiled-.*$" "/404";
-"~^/Old.*$" "/404";
 "~^/OpenAM.*$" "/404";
 "~^/PHP-API-Wrapper/.*$" "/404";
 "~^/PHPJackal.php.*$" "/404";
@@ -23334,8 +23383,6 @@
 "~^/of_last/.*$" "/404";
 "~^/official.ameba.jp.*$" "/404";
 "~^/oh-ya.com%2F__media__%2.*$" "/404";
-"~^/old.*$" "/404";
-"~^/old\/$" "/404";
 "~^/oldsite/.*$" "/404";
 "~^/omooo/.*$" "/404";
 "~^/one-piece-tv.*$" "/404";
