--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12340,3 +12340,9 @@ default "";
 "~^/doc/ai/poetry/2019-05-13-gpt2-poetry-345m-5000samples.txt.*$" "/doc/ai/nn/transformer/gpt/poetry/2019-05-13-gpt2-poetry-345m-5000samples.txt";
 "~^/doc/ai/nn/gan/stylegan/anime/2019-02-26-stylegan-faces-network-02048-016041-2-2.pkl.*$" "/doc/ai/nn/gan/stylegan/anime/2019-02-26-stylegan-faces-network-02048-016041.pkl";
 "~^/doc/ai/nn/gan/stylegan/anime/2019-02-26-stylegan-faces-network-02048-016041.pkl.*$" "/doc/ai/nn/gan/stylegan/anime/2019-02-26-gwern-stylegan-faces-network-02048-016041.pkl";
+"~^/doc/ai/nn/gan/stylegan/2020-06-07-aydao-stylegan2-configf-ffhq-512-avg-tpurun1.pkl.xz.*$" "/doc/ai/nn/gan/stylegan/2020-06-07-aydao-stylegan2-configf-ffhq-512-avg-tpurun1.pkl";
+"~^/doc/ai/nn/gan/stylegan/anime/2019-03-08-gwern-stylegan-animefaces-network-02051-021980.pkl.xz.*$" "/doc/ai/nn/gan/stylegan/anime/2019-03-08-gwern-stylegan-animefaces-network-02051-021980.pkl";
+"~^/doc/ai/nn/gan/stylegan/anime/2020-05-06-arfafax-stylegan2-tfdne-e621-r-512-3194880.pkl.xz.*$" "/doc/ai/nn/gan/stylegan/anime/2020-05-06-arfafax-stylegan2-tfdne-e621-r-512-3194880.pkl";
+"~^/doc/ai/anime/danbooru/2018-07-05-gwern-densenet101-sfwdanbooru-85percent.h5.xz.*$" "/doc/ai/anime/danbooru/2018-07-05-gwern-densenet101-sfwdanbooru-85percent.h5";
+"~^/doc/ai/nn/rnn/2015-08-05-gwern-charrnn-cssgeneration-lm_css_epoch24.00_0.7660.t7.xz.*$" "/doc/ai/nn/rnn/2015-08-05-gwern-charrnn-cssgeneration-lm_css_epoch24.00_0.7660.t7";
+"~^/doc/ai/nn/diffusion/midjourney/2025-03-09-gwern-midjourneyv6-noonecansaveanotherperson.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-03-09-gwern-midjourneyv6-noonecansaveanotherperson.jpg";
