--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12346,3 +12346,10 @@ default "";
 "~^/doc/ai/anime/danbooru/2018-07-05-gwern-densenet101-sfwdanbooru-85percent.h5.xz.*$" "/doc/ai/anime/danbooru/2018-07-05-gwern-densenet101-sfwdanbooru-85percent.h5";
 "~^/doc/ai/nn/rnn/2015-08-05-gwern-charrnn-cssgeneration-lm_css_epoch24.00_0.7660.t7.xz.*$" "/doc/ai/nn/rnn/2015-08-05-gwern-charrnn-cssgeneration-lm_css_epoch24.00_0.7660.t7";
 "~^/doc/ai/nn/diffusion/midjourney/2025-03-09-gwern-midjourneyv6-noonecansaveanotherperson.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-03-09-gwern-midjourneyv6-noonecansaveanotherperson.jpg";
+"~^/doc/psychology/2008-vrij.pdf.*$" "/doc/psychology/2007-vrij.pdf";
+"~^/doc/psychology/cognitive-bias/2018-oeberst.pdf.*$" "/doc/psychology/cognitive-bias/2017-oeberst.pdf";
+"~^/doc/psychology/cognitive-bias/2023-connor.pdf.*$" "/doc/psychology/cognitive-bias/2022-connor.pdf";
+"~^/doc/psychology/music/2008-ruthsatz.pdf.*$" "/doc/psychology/music/2007-ruthsatz.pdf";
+"~^/doc/psychology/music/distraction/2011-kampfe.pdf.*$" "/doc/psychology/music/distraction/2010-kampfe.pdf";
+"~^/doc/psychology/neuroscience/2009-schacter.pdf.*$" "/doc/psychology/neuroscience/2007-schacter.pdf";
+"~^/doc/psychology/neuroscience/2011-polilov.pdf.*$" "/doc/psychology/neuroscience/2012-polilov.pdf";
