--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12353,3 +12353,6 @@ default "";
 "~^/doc/psychology/music/distraction/2011-kampfe.pdf.*$" "/doc/psychology/music/distraction/2010-kampfe.pdf";
 "~^/doc/psychology/neuroscience/2009-schacter.pdf.*$" "/doc/psychology/neuroscience/2007-schacter.pdf";
 "~^/doc/psychology/neuroscience/2011-polilov.pdf.*$" "/doc/psychology/neuroscience/2012-polilov.pdf";
+"~^/doc/ai/nn/diffusion/midjourney/2025-03-11-gwern-midjourneyv6-whereistheendofthemthefishermensailing-fleetofnankeencolorsailboats.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-03-11-gwern-midjourneyv6-whereistheendofthemthefishermensailing-fleetofnankeencolorsailboats.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2025-03-11-gwern-midjourneyv6-whereistheendofthemthefishermensailing-derelictorangeboat.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-03-11-gwern-midjourneyv6-whereistheendofthemthefishermensailing-derelictorangeboat.jpg";
+"~^/doc/darknet-market/alphabay/3-16-cr-00109-SRU-1-main.pdf.*$" "/doc/darknet-market/alphabay/3-16-cr-00109-sru-1.pdf";
