Author/Annotation: begin parsing date & authors out of filenames (w/unit-test suite)

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12356,3 +12356,74 @@ default "";
 "~^/doc/ai/nn/diffusion/midjourney/2025-03-11-gwern-midjourneyv6-whereistheendofthemthefishermensailing-fleetofnankeencolorsailboats.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-03-11-gwern-midjourneyv6-whereistheendofthemthefishermensailing-fleetofnankeencolorsailboats.jpg";
 "~^/doc/ai/nn/diffusion/midjourney/2025-03-11-gwern-midjourneyv6-whereistheendofthemthefishermensailing-derelictorangeboat.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-03-11-gwern-midjourneyv6-whereistheendofthemthefishermensailing-derelictorangeboat.jpg";
 "~^/doc/darknet-market/alphabay/3-16-cr-00109-SRU-1-main.pdf.*$" "/doc/darknet-market/alphabay/3-16-cr-00109-sru-1.pdf";
+"~^/doc/psychology/personality/conscientiousness/2021-atherton.pdf.*$" "/doc/psychology/personality/conscientiousness/2020-atherton.pdf";
+"~^/doc/psychology/personality/narcissism/2016-visser.pdf.*$" "/doc/psychology/personality/narcissism/2017-visser.pdf";
+"~^/doc/anime/2009-laurenfaust-mylittleponyfriendshipmagic-showbible.pdf.*$" "/doc/anime/my-little-pony/2009-laurenfaust-mylittleponyfriendshipmagic-showbible.pdf";
+"~^/doc/personal/mal-anime.xml.*$" "/doc/personal/gwern-myanimelist-anime-export.xml";
+"~^/doc/personal/mal-manga.xml.*$" "/doc/personal/gwern-myanimelist-manga-export.xml";
+"~^/doc/personal/gwern-myanimelist-anime-export.xml.*$" "/doc/personal/gwern-myanimelist-export-anime.xml";
+"~^/doc/personal/gwern-myanimelist-manga-export.xml.*$" "/doc/personal/gwern-myanimelist-export-manga.xml";
+"~^/doc/traffic/2022070320230101-gwern-traffic-history.jpg.*$" "/doc/traffic/2022-07-03-2023-01-01-gwern-traffic-history.jpg";
+"~^/doc/traffic/2021070620220103-gwern-traffic-history.jpg.*$" "/doc/traffic/2021-07-06-2022-01-03-gwern-traffic-history.jpg";
+"~^/doc/traffic/2021010420210705-gwern-traffic-history.jpg.*$" "/doc/traffic/2021-01-04-2021-07-05-gwern-traffic-history.jpg";
+"~^/doc/traffic/2023010220230701-gwern.net-analytics.pdf.*$" "/doc/traffic/2023-01-02-2023-07-01-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/2021010420210705-gwern.net-analytics.pdf.*$" "/doc/traffic/2021-01-04-2021-07-05-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/2022010320220702-gwern.net-analytics.pdf.*$" "/doc/traffic/2022-01-03-2022-07-02-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/2022070320230101-gwern.net-analytics.pdf.*$" "/doc/traffic/2022-07-03-2023-01-01-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/2023010220230701-gwern-traffic-history.jpg.*$" "/doc/traffic/2023-01-02-2023-07-01-gwern-traffic-history.jpg";
+"~^/doc/traffic/2021070620220103-gwern.net-analytics.pdf.*$" "/doc/traffic/2021-07-06-2022-01-03-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/2022010320220702-gwern-traffic-history.jpg.*$" "/doc/traffic/2022-01-03-2022-07-02-gwern-traffic-history.jpg";
+"~^/doc/traffic/20102017-gwern-traffic-log.jpg.*$" "/doc/traffic/2010-2017-gwern-traffic-logtransform.jpg";
+"~^/doc/traffic/20102017-gwern-traffic.jpg.*$" "/doc/traffic/2010-2017-gwern-traffic.jpg";
+"~^/doc/traffic/20170108-traffic.csv.*$" "/doc/traffic/2017-01-08-gwern-traffic-advertisingabtest.csv";
+"~^/doc/traffic/20170908-traffic.csv.*$" "/doc/traffic/2017-09-08-gwern-traffic-advertisingabtest.csv";
+"~^/doc/traffic/20110702-20120102-gwern.net-analytics.pdf.*$" "/doc/traffic/2011-07-02-2012-01-02-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20120103-20120702-gwern.net-analytics.pdf.*$" "/doc/traffic/2012-01-03-2012-07-02-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20120703-20130102-gwern-traffic-history.jpg.*$" "/doc/traffic/2012-07-03-2013-01-02-gwern-gwern-traffic-history.jpg";
+"~^/doc/traffic/20120703-20130102-gwern.net-analytics.pdf.*$" "/doc/traffic/2012-07-03-2013-01-02-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20130103-20130702-gwern-traffic-history.png.*$" "/doc/traffic/2013-01-03-2013-07-02-gwern-gwern-traffic-history.png";
+"~^/doc/traffic/20130103-20130702-gwern.net-analytics.pdf.*$" "/doc/traffic/2013-01-03-2013-07-02-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20130703-20140102-gwern-traffic-history.png.*$" "/doc/traffic/2013-07-03-2014-01-02-gwern-gwern-traffic-history.png";
+"~^/doc/traffic/20130703-20140102-gwern.net-analytics.pdf.*$" "/doc/traffic/2013-07-03-2014-01-02-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20140103-20140702-gwern-traffic-history.png.*$" "/doc/traffic/2014-01-03-2014-07-02-gwern-gwern-traffic-history.png";
+"~^/doc/traffic/20140103-20140702-gwern.net-analytics.pdf.*$" "/doc/traffic/2014-01-03-2014-07-02-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20140703-20150103-gwern-traffic-history.png.*$" "/doc/traffic/2014-07-03-2015-01-03-gwern-gwern-traffic-history.png";
+"~^/doc/traffic/20140703-20150103-gwern.net-analytics.pdf.*$" "/doc/traffic/2014-07-03-2015-01-03-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20150103-20150702-gwern-traffic-history.png.*$" "/doc/traffic/2015-01-03-2015-07-02-gwern-gwern-traffic-history.png";
+"~^/doc/traffic/20150103-20150702-gwern.net-analytics.pdf.*$" "/doc/traffic/2015-01-03-2015-07-02-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20150703-20160103-gwern-traffic-history.jpg.*$" "/doc/traffic/2015-07-03-2016-01-03-gwern-gwern-traffic-history.jpg";
+"~^/doc/traffic/20150703-20160103-gwern.net-analytics.pdf.*$" "/doc/traffic/2015-07-03-2016-01-03-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20160104-20160703-gwern-traffic-history.jpg.*$" "/doc/traffic/2016-01-04-2016-07-03-gwern-gwern-traffic-history.jpg";
+"~^/doc/traffic/20160104-20160703-gwern.net-analytics.pdf.*$" "/doc/traffic/2016-01-04-2016-07-03-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20160704-20170103-gwern-traffic-history.jpg.*$" "/doc/traffic/2016-07-04-2017-01-03-gwern-gwern-traffic-history.jpg";
+"~^/doc/traffic/20160704-20170103-gwern.net-analytics.pdf.*$" "/doc/traffic/2016-07-04-2017-01-03-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20170101-20171015-gwern.net-analytics.pdf.*$" "/doc/traffic/2017-01-01-2017-10-15-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20170101-20181231-annualcomparison.pdf.*$" "/doc/traffic/2017-01-01-2018-12-31-gwern-annualcomparison.pdf";
+"~^/doc/traffic/20170104-20170703-gwern-traffic-history.jpg.*$" "/doc/traffic/2017-01-04-2017-07-03-gwern-gwern-traffic-history.jpg";
+"~^/doc/traffic/20170104-20170703-gwern.net-analytics.pdf.*$" "/doc/traffic/2017-01-04-2017-07-03-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20170704-20180103-gwern-traffic-history.jpg.*$" "/doc/traffic/2017-07-04-2018-01-03-gwern-gwern-traffic-history.jpg";
+"~^/doc/traffic/20170704-20180103-gwern.net-analytics-pages.pdf.*$" "/doc/traffic/2017-07-04-2018-01-03-gwern-gwern.net-analytics-pages.pdf";
+"~^/doc/traffic/20170704-20180103-gwern.net-analytics.pdf.*$" "/doc/traffic/2017-07-04-2018-01-03-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20180101-20191231-annualcomparison.pdf.*$" "/doc/traffic/2018-01-01-2019-12-31-gwern-annualcomparison.pdf";
+"~^/doc/traffic/20180104-20180703-gwern-traffic-history.jpg.*$" "/doc/traffic/2018-01-04-2018-07-03-gwern-gwern-traffic-history.jpg";
+"~^/doc/traffic/20180104-20180703-gwern.net-analytics-pages.pdf.*$" "/doc/traffic/2018-01-04-2018-07-03-gwern-gwern.net-analytics-pages.pdf";
+"~^/doc/traffic/20180104-20180703-gwern.net-analytics.pdf.*$" "/doc/traffic/2018-01-04-2018-07-03-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20180704-20190103-gwern-traffic-history.jpg.*$" "/doc/traffic/2018-07-04-2019-01-03-gwern-gwern-traffic-history.jpg";
+"~^/doc/traffic/20180704-20190103-gwern.net-analytics-pages.pdf.*$" "/doc/traffic/2018-07-04-2019-01-03-gwern-gwern.net-analytics-pages.pdf";
+"~^/doc/traffic/20180704-20190103-gwern.net-analytics.pdf.*$" "/doc/traffic/2018-07-04-2019-01-03-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/20190104-20190702-gwern.net-analytics-pages.pdf.*$" "/doc/traffic/2019-01-04-2019-07-02-gwern-gwern.net-analytics-pages.pdf";
+"~^/doc/traffic/20190218-20190720-twdne-analytics.pdf.*$" "/doc/traffic/2019-02-18-2019-07-20-gwern-twdne-analytics.pdf";
+"~^/doc/traffic/20190703-20200102-gwern-traffic-history.png.*$" "/doc/traffic/2019-07-03-2020-01-02-gwern-gwern-traffic-history.png";
+"~^/doc/traffic/20190703-20200102-gwern.net-analytics-pages.pdf.*$" "/doc/traffic/2019-07-03-2020-01-02-gwern-gwern.net-analytics-pages.pdf";
+"~^/doc/traffic/20200103-20200704-gwern-traffic-history.jpg.*$" "/doc/traffic/2020-01-03-2020-07-04-gwern-gwern-traffic-history.jpg";
+"~^/doc/traffic/20200103-20200704-gwern.net-analytics-pages.pdf.*$" "/doc/traffic/2020-01-03-2020-07-04-gwern-gwern.net-analytics-pages.pdf";
+"~^/doc/traffic/20200705-20210103-gwern-traffic-history.png.*$" "/doc/traffic/2020-07-05-2021-01-03-gwern-gwern-traffic-history.png";
+"~^/doc/traffic/20200705-20210103-gwern.net-analytics.pdf.*$" "/doc/traffic/2020-07-05-2021-01-03-gwern-gwern.net-analytics.pdf";
+"~^/doc/nootropic/quantified-self/20132014-magnesium.csv.*$" "/doc/nootropic/quantified-self/2013-2014-magnesium.csv";
+"~^/doc/traffic/20110228-20110702-gwern.net-analytics.pdf.*$" "/doc/traffic/2011-02-28-2011-07-02-gwern-gwern.net-analytics.pdf";
+"~^/doc/lesswrong-survey/20132014-lw-ea.csv.*$" "/doc/lesswrong-survey/2013-2014-lesswrong-effectivealtruismresponses.csv";
+"~^/doc/traffic/201107-201201-gwern-traffic-history.png.*$" "/doc/traffic/2011-07-02-2012-01-02-gwern-gwern-traffic-history.png";
+"~^/doc/traffic/201010-201102-gwern-traffic-history.png.*$" "/doc/traffic/2010-10-02-2011-02-02-gwern-gwern-traffic-history.png";
+"~^/doc/traffic/201102-201107-gwern-traffic-history.png.*$" "/doc/traffic/2011-02-02-2011-07-02-gwern-gwern-traffic-history.png";
+"~^/doc/traffic/201010-201102-gwern.net-analytics.pdf.*$" "/doc/traffic/2010-10-02-2011-02-02-gwern-gwern.net-analytics.pdf";
+"~^/doc/traffic/201201-201207-gwern-traffic-history.png.*$" "/doc/traffic/2012-01-02-2012-07-02-gwern-gwern-traffic-history.png";
