--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20443,7 +20443,7 @@
 "~^/doc/ai/nn/rnn/index\)/$" "/doc/ai/nn/rnn/index";
 "~^/.*DOCTYPE$" "/404";
 "~^/doc/technology/2004-03-30-shirky-situatedsoftware.html/.*$" "/doc/technology/2004-03-30-shirky-situatedsoftware.html";
-"~^/doc/statistics/decision/1986-stephens-foragingtheory.pdfAnts-at-work:-How-an-insect-society-is-organized$" "";
+"~^/doc/statistics/decision/1986-stephens-foragingtheory.pdfAnt.*$" "/doc/statistics/decision/1986-stephens-foragingtheory.pdf";
 "~^/doc/rotten.com/library/bio/crime/osama-bin-laden/$" "/doc/rotten.com/library/bio/crime/terrorists/osama-bin-laden/index.html";
 "~^/doc/reinforcement-learning/multi-agent/index\)/$" "/doc/reinforcement-learning/multi-agent/index";
 "~^/doc/reinforcement-learning/model-free/oa5/index\)/$" "/doc/reinforcement-learning/model-free/oa5/index";
