--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12427,3 +12427,10 @@ default "";
 "~^/doc/traffic/201102-201107-gwern-traffic-history.png.*$" "/doc/traffic/2011-02-02-2011-07-02-gwern-gwern-traffic-history.png";
 "~^/doc/traffic/201010-201102-gwern.net-analytics.pdf.*$" "/doc/traffic/2010-10-02-2011-02-02-gwern-gwern.net-analytics.pdf";
 "~^/doc/traffic/201201-201207-gwern-traffic-history.png.*$" "/doc/traffic/2012-01-02-2012-07-02-gwern-gwern-traffic-history.png";
+"~^/doc/psychology/personality/psychopathy/2019-landay.pdf.*$" "/doc/psychology/personality/psychopathy/2018-landay.pdf";
+"~^/doc/psychology/smell/perfume/2019-kraft.pdf.*$" "/doc/psychology/smell/perfume/2018-kraft.pdf";
+"~^/doc/psychology/spaced-repetition/2006-parker.pdf.*$" "/doc/psychology/spaced-repetition/2007-parker.pdf";
+"~^/doc/reinforcement-learning/openai/2024-03-08-mikeisaac-twitter-miramuraticommentaryonnytarticle.html.*$" "/doc/reinforcement-learning/openai/2024-03-07-mikeisaac-twitter-miramuraticommentaryonnytarticle.html";
+"~^/doc/science/2020-luc.pdf.*$" "/doc/science/2021-luc.pdf";
+"~^/doc/science/chemistry/2023-yao.pdf.*$" "/doc/science/chemistry/2022-yao.pdf";
+"~^/doc/sociology/2007-dana.pdf.*$" "/doc/sociology/2006-dana.pdf";
