--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20455,6 +20455,10 @@
 "~^/doc/genetics/heritable/1980-juelnielsen-individualandenvironmentmza.djvu.*$" "/doc/genetics/heritable/1980-juelnielsen-individualandenvironmentmza.pdf";
 "~^/doc/genetics/heritable/1962-shields-monozygotictwinsbroughtupapart.djvu.*$" "/doc/genetics/heritable/1962-shields-monozygotictwinsbroughtupapart.pdf";
 "~^/doc/economics/advertising/2019-03-27-googlesurveys-adblocknonusagereasons-%EF%BF%BD.*$" "/doc/economics/advertising/adblock/2019-03-21-googlesurveys-adblocknonusagereasons.csv";
+"~^/traffic-?light$" "/traffic-lights";
+"~^/traffic-?lights.+$" "/traffic-lights";
+"~^/traffic/light.*$" "/traffic-lights";
+"~^/light.*$" "/traffic-lights";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
