--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12434,3 +12434,4 @@ default "";
 "~^/doc/science/2020-luc.pdf.*$" "/doc/science/2021-luc.pdf";
 "~^/doc/science/chemistry/2023-yao.pdf.*$" "/doc/science/chemistry/2022-yao.pdf";
 "~^/doc/sociology/2007-dana.pdf.*$" "/doc/sociology/2006-dana.pdf";
+"~^/doc/technology/2009-arnold-bloggingstatisticsanddemographics.html.*$" "/doc/sociology/technology/2009-arnold-bloggingstatisticsanddemographics.html";
