--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12435,3 +12435,5 @@ default "";
 "~^/doc/science/chemistry/2023-yao.pdf.*$" "/doc/science/chemistry/2022-yao.pdf";
 "~^/doc/sociology/2007-dana.pdf.*$" "/doc/sociology/2006-dana.pdf";
 "~^/doc/technology/2009-arnold-bloggingstatisticsanddemographics.html.*$" "/doc/sociology/technology/2009-arnold-bloggingstatisticsanddemographics.html";
+"~^/doc/ai/nn/transformer/gpt/2022-05-22-gwern-meme-tintinwhataweekhuh-2ndanniversaryofgpt3paper.png.*$" "/doc/ai/nn/transformer/gpt/3/2022-05-22-gwern-meme-tintinwhataweekhuh-2ndanniversaryofgpt3paper.png";
+"~^/doc/psychology/1995-westby.pdf.*$" "/doc/psychology/novelty/1995-westby.pdf";
