--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12437,3 +12437,12 @@ default "";
 "~^/doc/technology/2009-arnold-bloggingstatisticsanddemographics.html.*$" "/doc/sociology/technology/2009-arnold-bloggingstatisticsanddemographics.html";
 "~^/doc/ai/nn/transformer/gpt/2022-05-22-gwern-meme-tintinwhataweekhuh-2ndanniversaryofgpt3paper.png.*$" "/doc/ai/nn/transformer/gpt/3/2022-05-22-gwern-meme-tintinwhataweekhuh-2ndanniversaryofgpt3paper.png";
 "~^/doc/psychology/1995-westby.pdf.*$" "/doc/psychology/novelty/1995-westby.pdf";
+"~^/doc/ai/nn/diffusion/midjourney/2025-03-16-gwern-midjourneyv6-painting-doubleess.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-03-16-gwern-midjourneyv6-painting-doubleess.jpg";
+"~^/doc/statistics/causality/1990-baker.pdf.*$" "/doc/statistics/causality/1990-becker.pdf";
+"~^/doc/sociology/2016-ong.pdf.*$" "/doc/sociology/2015-ong.pdf";
+"~^/doc/sociology/2021-engzell.pdf.*$" "/doc/sociology/2019-engzell.pdf";
+"~^/doc/sociology/technology/2020-mosquera.pdf.*$" "/doc/sociology/technology/2019-mosquera.pdf";
+"~^/doc/sociology/technology/2022-chopra.pdf.*$" "/doc/sociology/technology/2021-chopra.pdf";
+"~^/doc/statistics/bayes/2013-kruschke.pdf.*$" "/doc/statistics/bayes/2012-kruschke.pdf";
+"~^/doc/statistics/bias/2009-welton.pdf.*$" "/doc/statistics/bias/2008-welton.pdf";
+"~^/doc/fiction/science-fiction/frank-herbert/2013-normanspinrad-duneintroduction-germanedition.txt.*$" "/doc/fiction/science-fiction/frank-herbert/2013-normanspinrad-duneintroduction-germanedition.html";
